# Sabchnagesi

./: .gitignore  README.md  make_pdf.py  pyproject.toml
SabChnagaSi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
detector/: __init__.py  cli.py  engine.py  extractor.py
